<resources>
    <string name="app_name" translatable="false">Major Recommendation</string>

    <string name="english" translatable="false">English</string>
    <string name="khmer" translatable="false">ខ្មែរ</string>

    <string name="title_home">Home</string>
    <string name="title_more">More</string>
    <string name="title_account">Account</string>

    <string name="title_change_language">Change Language</string>
    <string name="change_language">Change Language</string>
    <string name="change_language_message">Changing the language will restart the app. Are you sure you want to change the language?</string>

    <string name="title_change_theme">Change Theme</string>
    <string name="system">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <string name="title_major_recommendation">Major Recommendation</string>
    <string name="title_majors">Majors</string>
    <string name="title_universities">Universities</string>
    <string name="title_science">Class Science</string>
    <string name="title_social">Class Social</string>

    <string name="label_contact">Contact:</string>
    <string name="label_faculty">Faculty:</string>
    <string name="label_fill_score">Please input your score for each subject from high school.</string>
    <string name="label_result_recommendation">Base on your score, we can calculate to find related major for you:</string>

    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="save">Save</string>

    <string name="dismiss">Dismiss</string>
    <string name="confirm">Confirm</string>

    <string name="search_hint">Search</string>
    <string name="error_message">An error occurred while loading</string>
    <string name="no_data_message">No data</string>
</resources>