<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RadioGroup
        android:layout_margin="16dp"
        android:id="@+id/rg_language"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/rb_khmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/khmer" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save" />
</LinearLayout>
