<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.SelectClassStudyActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_class_science"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_class_science"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_major" />

            <TextView
                android:id="@+id/txt_class_science"
                style="@style/MainTextStyle"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/img_class_science"
                android:text="@string/title_science" />

            <ImageView
                android:id="@+id/img_next_science"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_angle_small_right" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_class_social"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_class_social"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_major" />

            <TextView
                android:id="@+id/txt_class_social"
                style="@style/MainTextStyle"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/img_class_social"
                android:text="@string/title_social" />

            <ImageView
                android:id="@+id/img_next_social"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_angle_small_right" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
